[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/taz/diavolodellatasmania_attacco1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/taz/diavolodellatasmania_attacco2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/taz/diavolodellatasmania.png" type="Texture" id=3]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/taz/diavolodellatasmania_attacco3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/taz/cadutalibera.png" type="Texture" id=6]
[ext_resource path="res://scenes/prefabs/prop/Shadow.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/MobIA/Taz.gd" type="Script" id=8]
[ext_resource path="res://scenes/corps/TazCorpse.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sprites/taz/tazIcon.png" type="Texture" id=10]
[ext_resource path="res://src/utility/TriggerAttack.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38, 38 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 76.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "spin",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 66.1806
height = 67.6389

[sub_resource type="RayShape2D" id=5]
length = 800.0

[node name="Taz" instance=ExtResource( 4 )]
script = ExtResource( 8 )
CORPSE = ExtResource( 9 )
speed = 5000
icon = ExtResource( 10 )
direction = Vector2( 1, 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyChecker" index="0"]
position = Vector2( 0.999999, -29.5 )
rotation = 3.14159
shape = SubResource( 2 )

[node name="AnimatedSprite" parent="." index="2"]
position = Vector2( -10.041, -193.596 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="FallenMode" type="Sprite" parent="." index="3"]
position = Vector2( 17, -120 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="HitBox" type="Area2D" parent="." index="6"]
collision_layer = 2
collision_mask = 63

[node name="Body" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -3, -183 )
shape = SubResource( 4 )

[node name="Shadow" parent="." index="7"]
scale = Vector2( 0.3, 0.3 )

[node name="FallenShadow" parent="." index="8" instance=ExtResource( 7 )]
position = Vector2( 9, -9.53674e-07 )
scale = Vector2( 0.57, 0.48 )

[node name="TriggerAttack" type="Area2D" parent="." index="10"]
position = Vector2( -87, -218 )
rotation = 1.5708
collision_layer = 2
collision_mask = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Raycast" type="CollisionShape2D" parent="TriggerAttack" index="0"]
shape = SubResource( 5 )

[connection signal="area_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
[connection signal="body_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
